samples/_failures_safe/1761288301_2510e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_317bebfb.c: In function ‘compress_data’:
./samples/SAFE/__tmp_317bebfb.c:152:44: error: expected ‘;’ at end of input
  152 |             compressed_size = compress_none
      |                                            ^
      |                                            ;
./samples/SAFE/__tmp_317bebfb.c:152:13: error: expected declaration or statement at end of input
  152 |             compressed_size = compress_none
      |             ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_317bebfb.c:152:13: error: expected declaration or statement at end of input
